Adicionando parte da documentação referente as rotas de locais
