# src/swagger.json
@@ -19,6 +19,10 @@
         {
             "name": "Categorias",
             "description": "Operações relacionadas às categorias dos eventos culturais na plataforma."
+        },
+        {
+            "name": "Locais",
+            "description": "Operações relacionadas aos locais dos eventos culturais na plataforma."
         }
     ],
     "paths": {
@@ -248,6 +252,237 @@
                     }
                 }
             }
+        },
+        "/local": {
+            "post": {
+                "summary": "Cadastro de local",
+                "description": "Essa rota é responsável por cadastrar um novo local na plataforma.",
+                "tags": [
+                    "Locais"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Local"
+                            },
+                            "examples": {
+                                "local": {
+                                    "value": {
+                                        "nome": "Palacium",
+                                        "cidade": "Cajazeiras",
+                                        "CEP": "58900-000",
+                                        "rua": "Rua do Xamegão",
+                                        "numero": 29
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "401": {
+                        "description": "Erro na autenticação."
+                    },
+                    "400": {
+                        "description": "Local já cadastrado."
+                    },
+                    "201": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Local"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Erro ao criar local"
+                    }
+                }
+            }
+        },
+        "/locais": {
+            "get": {
+                "summary": "Buscar todos os locais",
+                "description": "Essa rota é responsável por buscar todos os locais na plataforma.",
+                "tags": [
+                    "Locais"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Local"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Nenhum local encontrado"
+                    },
+                    "500": {
+                        "description": "Erro ao buscar locais"
+                    }
+                }
+            }
+        },
+        "/local/{id}": {
+            "get": {
+                "summary": "Buscar local por ID",
+                "description": "Essa rota é responsável por buscar um local na plataforma.",
+                "tags": [
+                    "Locais"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID do local",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Local"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Local não encontrado"
+                    },
+                    "500": {
+                        "description": "Erro ao buscar local"
+                    }
+                }
+            },
+            "put": {
+                "summary": "Atualizar local por ID",
+                "description": "Essa rota é responsável por atualizar um local na plataforma pelo seu ID.",
+                "tags": [
+                    "Locais"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID do local",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Local"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Local"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Local não encontrado"
+                    },
+                    "500": {
+                        "description": "Erro ao atualizar local"
+                    }
+                }
+            },
+            "delete": {
+                "summary": "Deletar local por ID",
+                "description": "Essa rota é responsável por deletar um local na plataforma pelo seu ID.",
+                "tags": [
+                    "Locais"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID do local",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Local não encontrado"
+                    },
+                    "500": {
+                        "description": "Erro ao deletar local"
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -264,6 +499,36 @@
                 },
                 "required": [
                     "nome"
+                ]
+            },
+            "Local": {
+                "type": "object",
+                "properties": {
+                    "nome": {
+                        "type": "string"
+                    },
+                    "cidade": {
+                        "type": "string"
+                    },
+                    "CEP": {
+                        "type": "string"
+                    },
+                    "rua": {
+                        "type": "string"
+                    },
+                    "numero": {
+                        "type": "integer"
+                    },
+                    "id": {
+                        "type": "string"
+                    }
+                },
+                "required": [
+                    "nome",
+                    "CEP",
+                    "cidade",
+                    "rua",
+                    "numero"
                 ]
             }
         },
